--- a/pref/Resources/Info.plist
+++ b/pref/Resources/Info.plist
@@ -18,7 +18,11 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>DTPlatformName</key>
+	<string>iphoneos</string>
+	<key>MinimumOSVersion</key>
+	<string>3.0</string>
 	<key>NSPrincipalClass</key>
-	<string>cleansheetRootListController</string>
+	<string>CleanSheetsListController</string>
 </dict>
 </plist>
