--- a/cleansheets/Resources/Root.plist
+++ b/cleansheets/Resources/Root.plist
@@ -42,6 +42,22 @@
 			<key>action</key>
 			<string>respring</string>
 		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string></string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>cellClass</key>
+			<string>DevPersonCell</string>
+			<key>height</key>
+			<string>100</string>
+			<key>action</key>
+			<string>openTwitterDev</string>
+		</dict>		
 	</array>
 	<key>title</key>
 	<string>CleanSheets</string>
